--- a/.github/workflows/y.yml
+++ b/.github/workflows/y.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        ruby: [ '3.0', 2.7, 2.6, 2.5 ]
+        ruby: [ head, '3.2', '3.1', '3.0', 2.7, 2.6, 2.5 ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby
